--- a/Jobs API/package.json
+++ b/Jobs API/package.json
@@ -3,7 +3,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "http-status-codes": "^2.3.0",
-    "mongoose": "^8.6.2"
+    "mongoose": "^8.6.2",
+    "winston": "^3.14.2"
   },
   "type": "module",
   "devDependencies": {
